--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -16,15 +16,15 @@
 }
 
 body {
-    width: 100vw;
+    width: 100%;
     height: 100%;
+    background: url('../img/fundos/space.jpg') center center no-repeat fixed;
+    background-size: cover;
 }
 
 main {
     width: 100%;
     height: 100%;
-    background: url('../img/fundos/space.jpg') center center no-repeat fixed;
-    background-size: cover;
     display: flex;
     flex-direction: row;
     gap: 1rem;
@@ -38,10 +38,17 @@ main {
     background-size: contain;
     background-repeat: no-repeat;
 
+
+}
+
+.pasta a {
+    height: 55%;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: space-around;
-    padding-bottom: 7rem;
+    margin-top: 6rem;
+    text-decoration: none;
+    color: black;
 }
 
 .pasta img {
@@ -62,20 +69,24 @@ main {
     font-size: 1.5rem;
 }
 
+/* MODAL: */
 .arquivo {
     margin-top: 20%;
-    height: 600px;
-    background-image: url('../img/fundos/papel-rugoso.jpg');
+    width: 40.625rem;
+    height: 44.75rem;
+    background-image: url('../img/fundos/papel01.jpg');
+    background-position: center bottom;
+    background-size: cover;
     background-color: transparent;
 }
 
 .arquivo::before {
     content: "";
     position: absolute;
-    width: 200%;
-    height: 300%;
-    top: -80%;
-    left: -50%;
+    width: 140%;
+    height: 150%;
+    top: -25%;
+    left: -18%;
     z-index: -1;
     background: url('../img/fundos/folder-fundo.svg') center center no-repeat;
     background-size: contain;
@@ -91,49 +102,148 @@ main {
     border-bottom: 1px solid black;
 }
 
-.arquivo-parteSuperior {
+.arquivo-parteSuperior, .arquivo-parteInferior {
     width: 100%;
     height: auto;
-    border-bottom: 1px solid black;
-    padding-bottom: 8%;
 
     display: flex;
     gap: 3rem;
 }
 
+.arquivo-parteSuperior {
+    border-bottom: 1px solid black;
+    padding-bottom: 8%;
+}
+
+.arquivo-parteInferior {
+    padding-top: 5%;
+}
+
+/* IMAGENS DO MODAL: */
 .polaroid {
     border: solid #fff;
     border-width:6px 6px 20px 6px;
     box-shadow:1px 1px 5px #333; 
     -webkit-box-shadow:1px 1px 5px #333;
     -moz-box-shadow:1px 1px 5px #333;
-    height:150px; 
-    width:150px; 
+    height: 9.375rem; 
+    width: 9.375rem; 
 
     transform: rotate(-15deg);
 }
 
+.polaroid2 {
+    transform: rotate(0deg);
+    position: absolute;
+    left: 75%;
+    z-index: 1;
+
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.deslocado {
+    left: 50%;
+}
+
+.polaroid3 {
+    transform: rotate(6deg);
+    position: relative;
+    margin-right: -2%;
+}
+
+.fita {
+    max-width: 4rem;
+    position: absolute;
+    left: 8%;
+    bottom: 93%;
+    transform: rotate(20deg);
+}
+
+.paperclip {
+    max-width: 5rem;
+    position: absolute;
+    left: 95.2%;
+    top: 40%;
+    z-index: 2;
+}
+
+
+/* TEXTOS DO MODAL: */
 .dados .item {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     gap: 1rem;
 }
 
 .dados .pergunta {
     font-family: var(--fonte-titulo);
     font-variant: small-caps;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: bold;
+    flex-shrink: 0;
 }
 
 .dados .resposta {
     font-family: var(--fonte-conteudo);   
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-weight: 400;
+
+    max-height: 115px;
+    overflow-y: auto;
 }
 
-@media screen and (max-width: 768px) {
+/* FUNDOS PERSONALIZADOS: */
+#modalJonas .arquivo {
+    background-image: url('../img/fundos/papel03.jpg');
+}
+#modalJulian .arquivo {
+    background-image: url('../img/fundos/papel02.jpg');
+}
+#modalSayd .arquivo {
+    background-image: url('../img/fundos/papel04.jpg');
+}
+#modalVetrago .arquivo {
+    background-image: url('../img/fundos/papel05.jpg');
+}
+#modalDan .arquivo {
+    background-image: url('../img/fundos/papel06.jpg');
+}
+
+/* RODAPÉ: */
+footer {
+    height: 4rem;
+    background-color: rgb(31, 31, 31);
+    text-align: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+footer a {
+    text-decoration: none;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(235, 235, 235);
+    border: 1px solid rgb(235, 235, 235);;
+    border-radius: 50px;
+    padding: 0.5rem;
+}
+footer a:hover {
+    background-color: rgb(235, 235, 235);;
+    color: rgb(31, 31, 31);
+}
+
+@media screen and (max-width: 600px) {
     html {
         font-size: 8px;
+    }
+
+    body {
+        max-width: 100px;
+    }
+    
+    main#principal {
+        flex-direction: column;
     }
 }
