--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -238,12 +238,9 @@ footer a:hover {
     html {
         font-size: 8px;
     }
-
-    body {
-        max-width: 100px;
-    }
     
     main#principal {
         flex-direction: column;
+        align-items: center;
     }
 }
